gcc/testsuite/gdc.test/fail_compilation/uda_lambda.d
/+
TEST_OUTPUT:
---
fail_compilation/uda_lambda.d(7): Error: declaration expected, not `=>`
---
+/
@a => 7 int b;
